<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.goteam.paydrift.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="dev.goteam.paydrift.ui.fragments.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.goteam.paydrift.ui.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
