<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.fragments.operations.BuyAirtimeFragment">

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  android:id="@+id/left_guideline"
	  android:orientation="vertical"
	  app:layout_constraintGuide_percent=".1"
	  android:layout_height="match_parent"/>

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  app:layout_constraintGuide_percent=".9"
	  android:id="@+id/right_guideline"
	  android:orientation="vertical"
	  android:layout_height="match_parent"/>

	<TextView
	  android:layout_width="0dp"
	  android:layout_height="wrap_content"
	  android:text="@string/buy_airtime_text"
	  android:textColor="@color/colorPrimary"
	  android:textSize="30sp"
	  android:id="@+id/buy_airtime_heading"
	  android:textStyle="bold"
	  app:layout_constraintTop_toTopOf="parent"
	  android:layout_marginTop="20dp"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  app:layout_constraintStart_toEndOf="@id/left_guideline" />

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/select_bank_field"
	  android:hint="@string/select_bank_text"
	  app:endIconMode="dropdown_menu"
	  app:layout_constraintTop_toBottomOf="@id/buy_airtime_heading"
	  android:layout_marginTop="20dp"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.MaterialAutoCompleteTextView
		android:layout_width="match_parent"
		android:focusable="false"
		android:clickable="true"
		android:layout_height="match_parent"/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/select_mobile_number_field"
	  android:hint="@string/select_mobile_number_text"
	  app:endIconMode="dropdown_menu"
	  app:layout_constraintTop_toBottomOf="@id/select_bank_field"
	  android:layout_marginTop="20dp"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.MaterialAutoCompleteTextView
		android:layout_width="match_parent"
		android:focusable="false"
		android:clickable="true"
		android:layout_height="match_parent"/>

	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/phone_number_field"
	  android:visibility="gone"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  app:layout_constraintTop_toBottomOf="@id/select_mobile_number_field"
	  android:layout_marginTop="20dp"
	  android:hint="@string/phone_number_text"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.TextInputEditText
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	</com.google.android.material.textfield.TextInputLayout>

	<TextView
	  android:layout_width="0dp"
	  android:id="@+id/phone_number_helper_text"
	  android:text="@string/phone_account_number_text"
	  android:visibility="gone"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  app:layout_constraintTop_toBottomOf="@id/phone_number_field"
	  android:layout_height="wrap_content"/>

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintTop_toBottomOf="@id/phone_number_helper_text"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:layout_marginTop="20dp"
	  android:hint="@string/amount_text"
	  android:id="@+id/amount_field"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.TextInputEditText
		android:layout_width="match_parent"
		android:inputType="number"
		android:layout_height="match_parent"/>

	</com.google.android.material.textfield.TextInputLayout>

	<Button
	  android:layout_width="0dp"
	  android:layout_height="wrap_content"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  android:text="@string/send_text"
	  style="@style/ColoredButton"
	  android:id="@+id/send_button"
	  android:textAllCaps="false"
	  app:layout_constraintTop_toBottomOf="@id/amount_field"
	  android:layout_marginTop="20dp"
	  android:enabled="false"
	  android:textColor="@android:color/white"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>