<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorScreenOnboarding"
	tools:context=".ui.fragments.TransferFundsFragment">

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  android:id="@+id/left_guideline"
	  android:orientation="vertical"
	  app:layout_constraintGuide_percent=".1"
	  android:layout_height="match_parent"/>

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  app:layout_constraintGuide_percent=".9"
	  android:id="@+id/right_guideline"
	  android:orientation="vertical"
	  android:layout_height="match_parent"/>

	  <TextView
		  android:id="@+id/transfer_funds_heading"
		  android:layout_width="0dp"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="20dp"
		  android:fontFamily="@font/sf_pro_display_regular"
		  android:text="@string/transfer_funds_text"
		  android:textColor="@color/colorPrimary"
		  android:textSize="24sp"
		  android:textStyle="bold"
		  app:layout_constraintEnd_toStartOf="@id/right_guideline"
		  app:layout_constraintStart_toEndOf="@id/left_guideline"
		  app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/sender_bank_field"
	  android:hint="@string/select_bank_text"
	  app:layout_constraintTop_toBottomOf="@id/transfer_funds_heading"
	  android:layout_marginTop="20dp"
		app:endIconMode="dropdown_menu"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.MaterialAutoCompleteTextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clickable="true"
			android:focusable="false"
			android:fontFamily="@font/sf_pro_display_regular" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/select_recipient_bank_field"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
	  app:layout_constraintTop_toBottomOf="@id/sender_bank_field"
	  android:layout_marginTop="20dp"
	  android:hint="@string/select_recipient_bank_text"
	  app:endIconMode="dropdown_menu"
	  android:layout_height="wrap_content">

		<com.google.android.material.textfield.MaterialAutoCompleteTextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clickable="true"
			android:focusable="false"
			android:fontFamily="@font/sf_pro_display_regular" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:id="@+id/account_number_field"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  app:layout_constraintTop_toBottomOf="@id/select_recipient_bank_field"
	  android:layout_marginTop="20dp"
	  android:hint="@string/account_number_text"
		android:contentDescription="Recipient's Account number"
	  android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fontFamily="@font/sf_pro_display_regular" />

	</com.google.android.material.textfield.TextInputLayout>

	  <TextView
		  android:id="@+id/account_number_helper_text"
		  android:layout_width="0dp"
		  android:layout_height="wrap_content"
		  android:focusable="false"
		  android:fontFamily="@font/sf_pro_display_regular"
		  android:paddingStart="12dp"
		  android:text="@string/recipient_account_number_text"
		  android:textColor="@color/colorGreyDark"
		  app:layout_constraintEnd_toStartOf="@id/right_guideline"
		  app:layout_constraintStart_toEndOf="@id/left_guideline"
		  app:layout_constraintTop_toBottomOf="@id/account_number_field" />

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintTop_toBottomOf="@id/account_number_helper_text"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:layout_marginTop="20dp"
	  android:hint="@string/amount_text"
	  android:id="@+id/amount_field"
	  android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fontFamily="@font/sf_pro_display_regular"
			android:inputType="number" />

	</com.google.android.material.textfield.TextInputLayout>

	  <Button
		  android:id="@+id/send_button"
		  style="@style/ColoredButton"
		  android:layout_width="0dp"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="20dp"
		  android:enabled="false"
		  android:fontFamily="@font/sf_pro_display_medium"
		  android:text="@string/send_text"
		  android:textAllCaps="false"
		  android:textColor="@android:color/white"
		  app:layout_constraintEnd_toStartOf="@id/right_guideline"
		  app:layout_constraintStart_toEndOf="@id/left_guideline"
		  app:layout_constraintTop_toBottomOf="@id/amount_field" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>