<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	tools:context=".ui.activities.ForgotPinActivity"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:orientation="vertical"
	  android:id="@+id/left_guideline"
	  app:layout_constraintGuide_percent=".1" />

	<androidx.constraintlayout.widget.Guideline
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:orientation="vertical"
	  android:id="@+id/right_guideline"
	  app:layout_constraintGuide_percent=".9" />

	<ImageView
	  android:layout_width="48dp"
	  android:layout_height="48dp"
	  android:id="@+id/back_button"
	  app:layout_constraintStart_toEndOf="@id/left_guideline"
	  app:layout_constraintTop_toTopOf="parent"
	  android:layout_marginTop="20dp"
	  android:src="@drawable/ic_close" />

	<TextView
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:textSize="30sp"
	  android:textColor="@color/colorPrimary"
	  android:text="@string/forgot_pin_text"
	  android:id="@+id/change_pin_heading"
	  android:textStyle="bold"
	  android:layout_marginTop="10dp"
	  app:layout_constraintTop_toBottomOf="@id/back_button"
	  app:layout_constraintStart_toEndOf="@id/left_guideline" />

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintStart_toStartOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  app:layout_constraintTop_toBottomOf="@id/change_pin_heading"
	  android:id="@+id/new_pin_field_f"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  android:hint="@string/new_pin_text"
	  app:endIconMode="password_toggle"
	  android:layout_marginTop="20dp"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.TextInputEditText
		android:layout_width="match_parent"
		android:inputType="numberPassword"
		android:layout_height="match_parent" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
	  android:layout_width="0dp"
	  app:layout_constraintStart_toStartOf="@id/left_guideline"
	  app:endIconMode="password_toggle"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  app:layout_constraintTop_toBottomOf="@id/new_pin_field_f"
	  android:id="@+id/confirm_new_pin_field"
	  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
	  android:hint="@string/confirm_neW_pin_text"
	  android:layout_marginTop="20dp"
	  android:layout_height="wrap_content">

	  <com.google.android.material.textfield.TextInputEditText
		android:layout_width="match_parent"
		android:inputType="numberPassword"
		android:layout_height="match_parent" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
	  android:layout_width="0dp"
	  android:id="@+id/change_button"
	  app:layout_constraintStart_toStartOf="@id/left_guideline"
	  app:layout_constraintEnd_toStartOf="@id/right_guideline"
	  android:layout_marginTop="20dp"
	  style="@style/ColoredButton"
	  android:enabled="false"
	  android:textColor="@android:color/white"
	  android:text="@string/reset_pin"
	  android:textAllCaps="false"
	  app:layout_constraintTop_toBottomOf="@id/confirm_new_pin_field"
	  android:layout_height="wrap_content" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>